--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,27 +4,30 @@
     line-height: 1;
 }
 
-.textArea {
-    background: transparent;
-    border: none;
-    color: #000000;
-    border: .5px solid grey;
-    width: 100%;
-    height: 100%;
-    min-height: 80px;
-    margin:0px;
-    padding: 0px;
-}
-
 #header {
     text-align: center;
     color: black;
     border-bottom: 10px solid black;
 }
 
+.textArea {
+    background: transparent;
+    border: none;
+    resize: none;
+    color: #000000;
+    border-left: 1px solid black;
+    padding: 10px;
+    width:100%;
+    min-height: 80px;
+}
+
+.description{
+    white-space: pre-wrap;
+    padding:0;
+  }
+
 .time-block {
     text-align: center;
-    border-radius: 15px;
 }
 
 .row {
@@ -74,7 +77,7 @@
 }
 
 .saveBtn:hover {
-    font-size: 20px;
+    font-size: 19px;
     transition: all .2s ease-in-out;
 }
 
