--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -51,16 +51,20 @@
 .past {
     background-color: grey;
     color: white;
+    cursor: pointer;
 }
 
 .present {
     background-color: #ff6961;
     color: white;
+    cursor: pointer;
 }
 
 .future {
     background-color: #77dd77;
     color: white;
+    cursor: text;
+    cursor: pointer;
 }
 
 .saveBtn {
